[gd_scene load_steps=9 format=3 uid="uid://dd3xwghn3t50n"]

[ext_resource type="Script" uid="uid://bm0sixaw6g3mw" path="res://scripts/ranger_enemy.gd" id="1_dmll5"]
[ext_resource type="Texture2D" uid="uid://dfrmrkguwfycs" path="res://assets/textures/ranger.png" id="2_cdd42"]
[ext_resource type="Texture2D" uid="uid://brwxpdunr4yel" path="res://assets/textures/bow.png" id="3_wiavg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wiavg"]
atlas = ExtResource("2_cdd42")
region = Rect2(0, 0, 25, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vdtq"]
atlas = ExtResource("2_cdd42")
region = Rect2(25, 0, 25, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_11xy5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiavg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vdtq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx1yj"]
size = Vector2(86, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_xqeis"]
radius = 1005.6023

[node name="RangerEnemy" type="CharacterBody2D"]
z_index = 2
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 27
script = ExtResource("1_dmll5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -34)
scale = Vector2(6.24, 6.2399993)
sprite_frames = SubResource("SpriteFrames_11xy5")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_bx1yj")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="Freeze" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Vision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_xqeis")

[node name="Bow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(102.00001, -4.5474735e-13)
scale = Vector2(7.0769258, 7.0769234)
texture = ExtResource("3_wiavg")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
